--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,18 @@
-[res://player.gd]
+[res://README.md]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 266,
-"row": 19,
-"scroll_position": 20.0,
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
+"syntax_highlighter": "Markdown"
 }
 
-[res://mob.gd]
+[res://scripts/mob.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -22,6 +22,20 @@ state={
 "h_scroll_position": 0,
 "row": 12,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 266,
+"row": 19,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
