--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,17 +29,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/mob.tscn")
-current_scene="res://scenes/main.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(0, 76)
 
 [ScriptEditor]
 
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 132, 2940, 1620)
+floating_window_rect=Rect2i(1098, 564, 1399, 632)
 floating_window_screen=0
 
 [ShaderEditor]
