--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,15 @@ Thumbs.db
 
 # Logs
 logs/
+.godot/editor/editor_layout.cfg
+.godot/editor/editor_layout.cfg
+.godot/editor/editor_layout.cfg
+.godot/editor/filesystem_update4
+.godot/editor/main.tscn-folding-3ad5c15c4f3250da0cc7c1af1770d85f.cfg
+.godot/editor/script_editor_cache.cfg
+.godot/scene_groups_cache.cfg
+.godot/editor/script_editor_cache.cfg
+.godot/editor/project_metadata.cfg
+.godot/editor/main.tscn-folding-3ad5c15c4f3250da0cc7c1af1770d85f.cfg
+.godot/editor/filesystem_update4
+.godot/editor/editor_layout.cfg
