--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/mob.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://art/House In a Forest Loop.ogg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://art/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,22 +28,22 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/mob.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/mob.tscn", "res://scenes/music_player.tscn")
+current_scene="res://scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 76)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/main.gd", "res://scripts/mob.gd", "res://scripts/player.gd", "res://other/README.md"]
+open_scripts=["res://scenes/main.gd", "res://scripts/mob.gd", "res://scripts/player.gd", "res://other/README.md", "res://scenes/score_label.gd"]
 selected_script="res://scenes/main.gd"
 open_help=[]
 script_split_offset=400
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1098, 564, 1399, 632)
+floating_window_rect=Rect2i(594, 209, 732, 587)
 floating_window_screen=0
 
 [ShaderEditor]
