--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,8 +32,8 @@ open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tsc
 current_scene="res://scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=1
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://scenes/main.gd", "res://scripts/mob.gd", "res://scripts/player.gd", "res://other/README.md", "res://scenes/score_label.gd"]
-selected_script="res://scenes/main.gd"
+selected_script="res://scripts/mob.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
