--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 0.0,
-"selection": false,
+"row": 30,
+"scroll_position": 16.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 30,
+"selection_to_column": 56,
+"selection_to_line": 30,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 60.0,
-"selection": false,
+"row": 88,
+"scroll_position": 33.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 88,
 "syntax_highlighter": "GDScript"
 }
 
